[package]
name = "sonic-winnow"
version = "0.2.0"
authors = ["mrtambour <6724649+mrtambour@users.noreply.github.com>"]
edition = "2018"

[dependencies]
twitchchat = "0.6.1"
regex = "1.1.6"
reqwest = "0.9.17"
ytitler = "0.1.1"


[features]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 2
lto = true