[package]
name = "sonic-winnow"
version = "0.2.0"
authors = ["mrtambour <6724649+mrtambour@users.noreply.github.com>"]
edition = "2018"

[dependencies]
twitchchat = "0.14.8"
regex = "1.4.1"
reqwest = "0.11.0"
ytitler = "0.1.1"



[features]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 2
lto = true